FINAL: Revert deploy job to self-hosted with KUBECONFIG for K8s deployment

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,6 +21,7 @@ on:
         options:
           - 'false'
           - 'true'
+          - 'true'
 
 env:
   # Azure Configuration - Set these in GitHub Repository Variables
@@ -265,11 +266,13 @@ jobs:
 
   deploy:
     needs: download
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: ${{ inputs.skip_deployment != 'true' }}
     permissions:
       contents: read
       packages: write
+    env:
+      KUBECONFIG: /Users/danyukezz/.kube/config
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
