--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -285,6 +285,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository_owner }}/plant-disease-api
           tags: |
+            type=raw,value=latest
             type=ref,event=branch
             type=sha,prefix={{branch}}-
             type=semver,pattern={{version}}
