--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: plant-disease-api
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: plant-disease-api
@@ -24,13 +24,17 @@ spec:
         env:
         - name: PYTHONUNBUFFERED
           value: "1"
+        - name: OMP_NUM_THREADS
+          value: "2"
+        - name: MKL_NUM_THREADS
+          value: "2"
         resources:
           requests:
-            memory: "512Mi"
-            cpu: "250m"
+            memory: "1Gi"
+            cpu: "500m"
           limits:
-            memory: "2Gi"
-            cpu: "1000m"
+            memory: "3Gi"
+            cpu: "1500m"
         livenessProbe:
           httpGet:
             path: /health
